# Audio

./: CMakeLists.txt  README.md
include/: AudioFile.h  Factory.h  Helpers.h  Interpreter.h  ProcessCommand.h  Sample_t.h  SystemEndianness.h
include/ProcessCommands/: ChangeGain.h  Compressor.h  Filter.h  ProcessCommandMacro.h
src/: AudioFIle.cpp  Factory.cpp  Helpers.cpp  Interpreter.cpp  main.cpp
src/ProcessCommands/: ChangeGain.cpp  Compressor.cpp  Filter.cpp  ProcessCommandMacro.cpp
text/: AvailableProcessCommands.txt
